2004-11-01  Matthias Clasen  <mclasen@redhat.com>

	* glib/gutils.h: Make gtkdoc-scan happy by removing spaces
	between gchar and *.

2004-11-01  Tor Lillqvist  <tml@iki.fi>

	* glib/gstdio.c (g_lstat): Implement correctly also on Unix
	systems without lstat(). (#157038, Morten Welinder)

2004-11-01  Ray Strode <rstrode@redhat.com>

	* glib/gkeyfile.c:
	(g_key_file_get_locale_string): don't return an
	error if we come across a value with invalid utf8 or
	if we don't find a translated string. Just fallback
	to the untranslated string (Mark McLoughlin, bug
	#156790).
	
	* glib/gkeyfile.c:
	(g_key_file_init), (g_key_file_clear): track the
	actual start GKeyFileGroup rather than just its name
	(g_key_file_parse_group): allow add_group() to
	update the start group.
	(g_key_file_remove_group_node): update the start
	group if it gets removed (Mark McLoughlin, bug
	#156790).

	* glib/gkeyfile.c:
	(g_key_file_parse_string_as_value): Don't escape
	tabs and spaces in the middle of key values.

2004-11-01  Matthias Clasen  <mclasen@redhat.com>

	* glib/gconvert.c:
	* glib/gdebug.h
	* glib/gutils.c
	* gobject/gtype.c
	* gthread/gthread-posix.c
	* tests/timeloop-closure.c
	* tests/timeloop.c: Fix sparse warnings.  (#157014, Kjartan Maraas)

2004-11-01  Matthias Clasen  <mclasen@redhat.com>

	* glib/goption.c: Documentation updates.

	Handle conflicts between options in different groups. (#156808)
	
	* glib/goption.c (g_option_context_parse): When a long option does not
	match exactly, try to parse it as --group-option.
	(g_option_context_add_group): Warn if a group name conflict occurs.

	* glib/goption.c (print_help): Print out the effective options, ie 
	don't print shadowed short options, and for long options print
	--group-option instead of --option if appropriate.

2004-10-31  Matthias Clasen  <mclasen@redhat.com>

	* glib/gwin32.c: Add bits of markup to g_win32_get_windows_version()
	docs.

2004-10-31  Tor Lillqvist  <tml@iki.fi>
